fix whitespace

--- a/styles/ink.less
+++ b/styles/ink.less
@@ -50,6 +50,8 @@ atom-text-editor::shadow {
   max-width: 500px;
   max-height: 500px;
 
+  white-space: pre;
+
   .header {
     // font-weight: bold;
   }
